crates/aven-check/tests/fixtures/check/invalid/call-arg-nested.av
f : (Text) -> Text
f = (x) => x
h : (Text) -> Text
h = (x) => x
top = h(f(42))
